--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,16 @@ body.dark {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
+  justify-content: center;
+}
+
+.post img {
+  max-width: 800px;
+  object-fit: contain;
+  height: auto;
+  border-radius: 5%;
 }
 
 .image-container {
@@ -304,7 +313,6 @@ body.dark {
 }
 
 .image-container img {
-  width: 100%;
   height: auto;
 }
 
@@ -312,14 +320,6 @@ body.dark {
   display: flex;
   align-items: center;
   margin-top: 10px;
-}
-
-.user-info img {
-  width: 40px;
-  /* Adjust avatar size */
-  height: 40px;
-  border-radius: 50%;
-  margin-right: 10px;
 }
 
 .user-info span {
